--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>This is my site</title>
 </head>
 <body>
 
-<h1>This is my first super puper site</h1>
+<h1>This is my first super <del>puper</del> site</h1>
 
 </body>
 </html>
