--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<li> <a href="https://credit-agricole.ua/">Креді Агріколь Банк</a> </li>
 	<li> <a href="https://www.otpbank.com.ua">ОТП Банк</a> </li>
 	<li> <a href="https://www.kredobank.com.ua/">Кредобанк</a> </li>
-
 </ol>
-<a href="https://www.adidas.net.ua/"><img src="images/adidas1.jpg" width="20%"></a> <br>
+
+<a href="https://www.adidas.net.ua/"><img src="images/adidas1.jpg" width="20%"></a>
 
 </body>
 </html>
