--- a/index.html
+++ b/index.html
@@ -18,5 +18,119 @@
 
 <a href="https://www.adidas.net.ua/"><img src="images/adidas1.jpg" width="20%"></a>
 
+
+<table border="1">
+<tr>
+	<th>#</th>
+	<th>Name</th>
+	<th>Description</th>
+</tr>
+
+<tr>
+	<td>1</td>
+	<td>Somename</td>
+	<td>SomeDesc</td>
+</tr>
+
+
+<tr>
+	<td>2</td>
+	<td>Somename</td>
+	<td>SomeDesc</td>
+</tr>
+
+<tr>
+	<td>3</td>
+	<td>Somename</td>
+	<td>SomeDesc</td>
+</tr>
+
+	
+</table>
+<br><br>
+<table border="1">
+<tr>
+	<th>#</th>
+	<th>Name</th>
+	<th>Description</th>
+</tr>
+
+<tr>
+	<td>1</td>
+	<td rowspan="3"></td>
+	<td>SomeDesc</td>
+</tr>
+
+
+<tr>
+	<td>2</td>
+	
+	<td>SomeDesc</td>
+</tr>
+
+<tr>
+	<td>3</td>
+	
+	<td>SomeDesc</td>
+</tr>
+
+	
+</table> 
+
+<br><br>
+<table border="1">
+<tr>
+	<th>#</th>
+	<th>Name</th>
+	<th>Description</th>
+</tr>
+
+<tr>
+	<td colspan=3>SomeCategory</td>
+	
+</tr>
+
+
+<tr>
+	<td>2</td>
+	<td>Somename</td>
+	<td>SomeDesc</td>
+</tr>
+
+<tr>
+	<td>3</td>
+	<td>Somename</td>
+	<td>SomeDesc</td>
+</tr>
+
+	
+</table> 
+<br><br>
+
+<table border="1" width="300px">
+	<tr>
+		<td colspan="4">Test table</td>
+		
+	</tr>
+	<tr>
+		<td colspan="2">2</td>
+		
+		<td rowspan="3">0</td>
+		<td>1</td>
+	</tr>
+	<tr>
+		<td rowspan="2">3</td>
+		<td>c</td>
+		<td>1</td>
+	</tr>
+	<tr>
+		
+		<td>d</td>
+		<td>1</td>
+	</tr>
+
+
+</table>
+
 </body>
 </html>
